Fix dark mode for Add Auth Provider page
Summary:
Icons were hard to see. Now they are not, plus are vertically centered.
No clue if circles are a design pattern in Phorge; you are free to come up with something better.

Refs T15056

Test Plan: Go to http://phorge.localhost/auth/config/new/

Reviewers: O1 Blessed Committers, valerio.bozzolan

Reviewed By: O1 Blessed Committers, valerio.bozzolan

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26189

--- a/webroot/rsrc/css/phui/object-item/phui-oi-list-view.css
+++ b/webroot/rsrc/css/phui/object-item/phui-oi-list-view.css
@@ -635,6 +635,16 @@ ul.phui-oi-list-view .phui-oi-selected
   line-height: 36px;
 }
 
+/* Set $hoverblue for auth icons to make them readable in dark mode */
+.phui-oi-image-icon.phui-oi-with-sprite-image {
+  background-image: radial-gradient(#eceff5 0%, #eceff5 60%, transparent 65%);
+  margin: 10px 2px 12px;
+}
+
+.phui-icon-view.sprite-login {
+  margin-top: 6px;
+}
+
 .phui-oi-image {
   width: 40px;
   height: 40px;
